@@ -112,7 +112,7 @@ int  add_channel(chn_list **, char *, char *, char *);
 void del_channel(chn_list **, char *);
 int  do_command(char *, char *, char *);
 
-void send_all(const char *, ...);
+void send_all(char *);
 void send_at(char *, char *, char *);
 void send_nick(char *, char *, char *);
 void check_servers(void);
