@@ -27,11 +27,17 @@ v0.83.14	23-Feb-2006
 		- If available each message now has a msgid in the header.
 		- Added a .info file with control information.
 
+	mbmon:
+		Better user input checking in chat.
+
 	mbsetup:
 		Added archiver selection for nodes in node setup.
 		In archiver select added checks for valid archivers and allowed
 		escape without selecting an archiver.
 		Added selection of archiver select menu.
+
+	mbtask:
+		Safer code for chat.
 
 	lang:
 		New prompts 86, 87, 88 and 89.
